# university-work

./: .gitignore
1st Year/First Semester/Analysis/Seminary 5/: learning-rate.py
1st Year/First Semester/Assembly/n2/: simple.asm
1st Year/First Semester/Assembly/n3/: add-sub-2.asm
1st Year/First Semester/Assembly/n4/: bits.asm
1st Year/First Semester/Assembly/n6/: strings.asm
1st Year/First Semester/Assembly/n7/: functions.asm
1st Year/First Semester/Assembly/n9/: Makefile
1st Year/First Semester/Logic/operations-conversions/: user-interface.v
1st Year/First Semester/Python/: .gitignore
1st Year/Second Semester/Data Structures/1.1/: .gitignore  readme.md  run.sh
1st Year/Second Semester/Data Structures/5/: CMakeLists.txt  clean.sh  readme.md  run.sh
1st Year/Second Semester/Dynamic Systems/practice/: 1.py  3.py  4.py  5.py
1st Year/Second Semester/Dynamic Systems/test/: 1.py  2.py  4.py
1st Year/Second Semester/Graphs/pw2/: .gitignore  __main__.py
1st Year/Second Semester/Graphs/pw5/: .gitignore  readme.md
1st Year/Second Semester/OOP/a1/: CMakeLists.txt
1st Year/Second Semester/OOP/a23/: CMakeLists.txt  README.md  run.sh  test.sh
1st Year/Second Semester/OOP/a23/src/: domain.h  main.c  repo.h  service.c  service.h  ui.c
1st Year/Second Semester/OOP/a23/tests/: all.c  test_repo.c
1st Year/Second Semester/OOP/a45/: CMakeLists.txt
1st Year/Second Semester/OOP/a6/: coverage.sh  run.sh  test.sh
1st Year/Second Semester/OOP/a7/: .gitignore  Schema.mdj  build.bat
1st Year/Second Semester/OOP/t1/: .gitignore  CMakeLists.txt  test.sh
1st Year/Second Semester/OOP/t3/: CMakeLists.txt  README.md
1st Year/Second Semester/OOP/t3/include/domain/: all.hpp  interval.hpp
1st Year/Second Semester/OOP/t3/include/repository/: all.hpp
2nd Year/First Semester/Java/assignment2/: Makefile  task.md
2nd Year/First Semester/Java/assignment3/: task.md
2nd Year/First Semester/Java/assignment4/: Makefile
2nd Year/First Semester/Java/assignment5/: task.md
2nd Year/First Semester/Java/assignment6/: .gitignore  Makefile  pom.xml  (+1 more)
2nd Year/First Semester/SQL/: assignment1.txt  assignment3.sql  assignment4.txt  assignment4TeacherScript.sql  assignment5.sql
2nd Year/Second Semester/Artificial Intelligence/: lab1.ipynb  lab10.ipynb
2nd Year/Second Semester/I hate databases/: Lab3.sql
3rd Year/Cryptography/lab1/: CMakeLists.txt  README.md
3rd Year/Cryptography/lab2/: .gitignore  CMakeLists.txt  Makefile  README.md
3rd Year/Cryptography/lab2/src/: main.c
3rd Year/Cryptography/lab3/: .gitignore  Makefile  README.md
3rd Year/Cryptography/lab4/: HttpDownloaderEventDriven.cs
3rd Year/Formal Languages/lab1a/: p1.plua  p1err.plua  p2.plua  p3.plua
3rd Year/Formal Languages/lab1b/: lexic.txt  syntax.in  token.in
3rd Year/Formal Languages/lab2/: CMakeLists.txt  Makefile
3rd Year/Formal Languages/lab3/: CMakeLists.txt  DOC.md  Makefile  README.md
3rd Year/Formal Languages/lab4/: .gitignore  CMakeLists.txt  Makefile  README.md
3rd Year/Formal Languages/lab4/inc/lang/: lexer.hpp  scanner.hpp  symbol_table.hpp
3rd Year/Formal Languages/lab4/inputs/: FA-number.in
3rd Year/Formal Languages/lab4/src/: main.cpp
3rd Year/Formal Languages/lab4/src/lang/: lexer.cpp
3rd Year/Formal Languages/lab5/: CMakeLists.txt  DOC.md  README.md
3rd Year/Formal Languages/lab6/: Makefile  README.md
3rd Year/Formal Languages/lab7/: CMakeLists.txt  Makefile  README.md
3rd Year/Formal Languages/lab8/: Makefile  README.md
3rd Year/Paralel Programming/bonus1/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  output.txt
3rd Year/Paralel Programming/bonus1/inc/: utils.hpp
3rd Year/Paralel Programming/bonus1/src/: main.cpp
3rd Year/Paralel Programming/bonus2/: CMakeLists.txt  README.md
3rd Year/Paralel Programming/bonus2/inc/: utils.hpp
3rd Year/Paralel Programming/bonus2/src/: main.cpp
3rd Year/Paralel Programming/bonus3/: CMakeLists.txt  Makefile  README.md
3rd Year/Paralel Programming/lab1/: .gitignore  BENCHMARKS.md  CMakeLists.txt  Makefile  README.md
3rd Year/Paralel Programming/lab1/.cache/clangd/index/: main.c.0FA08B2B1CA49061.idx
3rd Year/Paralel Programming/lab1/inc/: context.hpp  data.hpp  utils.hpp
3rd Year/Paralel Programming/lab1/src/: context.cpp  data.cpp  main.c  main.cpp
3rd Year/Paralel Programming/lab2/: Makefile  README.md
3rd Year/Paralel Programming/lab3/: CMakeLists.txt  Makefile  README.md
3rd Year/Paralel Programming/lab4/: HttpDownloaderAsyncAwait.cs  HttpDownloaderEventDriven.cs  Makefile  Program.cs  README.md  StateObject.cs
3rd Year/Paralel Programming/lab5/: CMakeLists.txt  HttpDownloaderTaskBased.cs  Makefile  Program.cs  README.md
3rd Year/Paralel Programming/lab6/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  generator.py
3rd Year/Paralel Programming/lab7/: __main__.py
3rd Year/Paralel Programming/lab8/: __main__.py  dsm_lib.py  requirements.txt
3rd Year/Paralel Programming/nbody/: README.MD  conf.lua  main.lua  thread.lua
First Year/First Semester/Assembly/: .gitignore
First Year/Second Semester/OOP/a7/: CMakeLists.txt  README.md  clean.bat  run.bat  test.bat
First Year/Second Semester/OOP/a7/include/domain/: exception.hpp  user.hpp
First Year/Second Semester/OOP/a7/include/repository/: base.hpp  memory.hpp
First Year/Second Semester/OOP/a7/include/service/: service.hpp
First Year/Second Semester/OOP/a7/src/domain/: event.cpp  time.cpp
First Year/Second Semester/OOP/a7/src/ui/: ui.cpp
First Year/Second Semester/OOP/a7/tests/: macros.hpp
Second Year/First Semester/Java/: README.md
Second Year/First Semester/Networking/: test.pkt  test_network.txt
Second Year/First Semester/Octave/: lab22.m
Second Year/First Semester/SQL/: assignment1.sql  assignment2.sql  assignment2.txt  assignment3.sql  assignment3.txt  assignment4.sql  assignment5.txt
Second Year/Second Semester/Artificial Intelligence/: AI_2024_lab_01.ipynb  lab1.ipynb  lab4.ipynb  lab5.ipynb  lab8.ipynb  lab9.ipynb
Second Year/Second Semester/I hate databases/: Lab3-T2.sql  Lab3.sql
(+855 files in other folders)
